new and updated

--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -3,6 +3,7 @@ id: software-set-up
 description: Install the Pioreactor software onto the Raspberry Pi
 title: Software installation
 slug: /software-set-up
+sidebar_class_name: sidebar-item--updated
 ---
 
 import TOCInline from '@theme/TOCInline';
