updates from ante

--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -34,18 +34,19 @@ We'll start with your blank microSD card.
     ![Click "App options"](/img/user-guide/app_options.png)
 4.  Click **Edit** next to _Content Repository_.
     ![Click "Edit" to choose repository](/img/user-guide/content_repo.png)
-5.  Choose **Use Custom URL**, and enter into the box: `https://pioreactor.com/imager/os-list.json`.
+5.  Choose **Use Custom URL**, and paste the value: `https://pioreactor.com/imager/os-list.json`
+
     ![Add our repo URL](/img/user-guide/edit_repo.png)
 6.  Click **Apply & restart**.
 7.  Choose your RPi model. Select **Next**.
     ![Choose your RPi model](/img/user-guide/choose_rpi.png)
-8.  Choose the operating system **Pioreactor**.
+8.  Choose the operating system **Pioreactor**. Click **Next**.
     ![Choose your Pioreactor](/img/user-guide/choose_pio_os.png)
-9.  Choose the **latest** OS on the list (at the top).
+9.  Choose the **latest** OS on the list (at the top). Click **Next**.
     ![Choose latest](/img/user-guide/latest_os.png)
 10. Choose the **Leader + Worker**. Click **Next**.
     ![Choose leader + worker](/img/user-guide/pio_lw_os.png)
-11. Insert your micro SD card if you haven't already. Select your Storage device.
+11. Insert your micro SD card if you haven't already. Select your Storage device (it may be a different icon than shown).
     ![Choose storage](/img/user-guide/choose_storage.png)
 12. Input a unique name for this Pioreactor. Some names that we use for our first Pioreactor: `pioreactor01`, or `leader`, or `pio01`. _Don't_ use `pioreactor` or `raspberrypi`.
     ![Choose hostname](/img/user-guide/choose_hostname.png)
@@ -99,7 +100,7 @@ We'll start with your blank microSD card.
         height: "80vw",
         maxWidth: "350px",
         maxHeight: "350px",
-        border: "1px solid #ccc",
+        border: "1px solid #dadbdc",
         borderRadius: "50%",
         boxSizing: "border-box",
         display: "flex",
