upgrade kit docs

--- a/user-guide/01-getting-started/00-gettingstarted.mdx
+++ b/user-guide/01-getting-started/00-gettingstarted.mdx
@@ -29,6 +29,8 @@ import Card from '@site/src/components/Card';
 <h3> Upgrade kits and accessories</h3>
 
 <div className="cardGrid">
+    <Card imageUrl="user-guide/hardware-assembly/upgrade_kits/40ml1.0to-1.5.webp" headerText="Pioreactor 40ml v1.0 → v1.5 upgrade kit" linkUrl="/user-guide/40ml-v10-upgrade-v15-upgrade-disassembly" isNew={true} />
+    <Card imageUrl="user-guide/hardware-assembly/upgrade_kits/20ml_1.1to-1.5_1.webp" headerText="Pioreactor 20ml v1.1 → v1.5 upgrade kit" linkUrl="/user-guide/20ml-v11-upgrade-v15-upgrade-disassembly" isNew={true} />
     <Card imageUrl="user-guide/hardware-assembly/upgrade-version-splash.png" headerText="Pioreactor 20ml v1.0 → v1.1 upgrade kit" linkUrl="/user-guide/v11-upgrade-hardware-setup"/>
     <Card imageUrl="user-guide/add-teh/14_teh_finished.jpeg" headerText="Temperature Expansion Kit" linkUrl="/user-guide/temperature-expansion-kit" />
     <Card imageUrl="user-guide/hardware-assembly/pioreactor_dosing_splash.webp" headerText="Adding peristaltic pumps" linkUrl="/user-guide/using-pumps" />
