--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -6,8 +6,7 @@ slug: /software-set-up
 sidebar_class_name: sidebar-item--updated
 ---
 
-import TOCInline from '@theme/TOCInline';
-import ButtonDownloadVersionedImage from '@site/src/components/ButtonDownloadVersionedImage';
+import CopyToClipboardButton from '@site/src/components/CopyToClipboardButton';
 
 
 ### Before you begin
@@ -34,7 +33,7 @@ We'll start with your blank microSD card.
     ![Click "App options"](/img/user-guide/01-getting-started/02-software-set-up/app_options.png)
 4.  Click **Edit** next to _Content Repository_.
     ![Click "Edit" to choose repository](/img/user-guide/01-getting-started/02-software-set-up/content_repo.png)
-5.  Choose **Use Custom URL**, and paste the value: `https://pioreactor.com/imager/os-list.json`
+5.  Choose **Use Custom URL**, and paste the value: `https://pioreactor.com/imager/os-list.json` <CopyToClipboardButton content="https://pioreactor.com/imager/os-list.json" label="Copy" style={{ marginLeft: '0.5rem' }} />
 
     ![Add our repo URL](/img/user-guide/01-getting-started/02-software-set-up/edit_repo.png)
 6.  Click **Apply & restart**.
