--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -131,6 +131,10 @@ Stirring is performed with a micro stir bar inside the vial, controlled by a pai
 
 Of course! The maximum length of a stir bar is 20mm. Keep the height low as to not interfere with the optics. (The provided stir bar is 3mm high). Try using other stir bar shapes / designs!
 
+### Why does the stir bar stop or wobble when OD dodging changes RPM?
+
+This is usually a calibration or seating issue. Make sure a stirring calibration is active (re-run it after software updates or hardware changes) and confirm the vial is fully seated on the heating pad. Even a small gap, for example from an o-ring or debris, can make the bar lose sync during RPM transitions.
+
 ### The magnets rub against the plastic screws above them, causing the stirring performance to be degraded / stop. How do I fix this?
 
 Detach the top faceplate. Under the faceplate, slightly unscrew each of the four metal screws. This will add more space between the magnets and the plastic screws.
