--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -40,6 +40,10 @@ The button can be [reprogrammed](/developer-guide/hat-button), too.
 
 Under _Inventory_ -> _Leader_, there is a card titled _Cluster clocks_. You can change the date and time there.
 
+### The UI says "Unknown Pioreactor model: name and version not set yet" or the model dialog never appeared. What do I do?
+
+Go to the **Inventory** page and use the **Model** dropdown on the Pioreactor card to set the correct model and hardware version (the dropdown can be hidden on narrow cards). Save the change and reboot the Pioreactor from the Inventory page. This should clear the error and let the UI load normally.
+
 ### What are the measurements of the vials?
 
 |  40ml vials     | Bottom OD | Middle OD | Bottom to Neck Height |  Neck Height | Total Height |
