--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -91,7 +91,7 @@ We'll start with your blank microSD card.
     If the **Update Pioreactor model** dialog doesn't appear, open the **Inventory** page and use the **Model** dropdown on the Pioreactor card to select the correct model and hardware version (the dropdown can be hidden if the card is narrow). Then reboot the Pioreactor from the Inventory page.
     :::
 
-14. The Pioreactor is now ready for use! Follow [this guide](/user-guide/prepare-vial-for-cultures) to set up your first experiment.
+14. The Pioreactor is now ready for use! Follow the [hardware pre-flight check](/user-guide/pre-flight-hardware-check) before setting up your first experiment.
 
 
     <div
