--- a/user-guide/01-getting-started/02-software-set-up.mdx
+++ b/user-guide/01-getting-started/02-software-set-up.mdx
@@ -150,7 +150,7 @@ Follow the instructions [here to add your worker to your Pioreactor cluster](/us
 On the leader's command line, the command `pio workers add <hostname>` will connect the new Pioreactor worker to the cluster.
 
 :::tip
-We recommend running a [self-test](/user-guide/running-self-test) on all Pioreactors after your initial setup to detect any hardware bugs at this point.
+We recommend running a [pre-flight hardware check](/user-guide/pre-flight-hardware-check) on all Pioreactors after your initial setup to detect any hardware bugs at this point.
 :::
 
 ## Common questions
